added command line options for jpackager